Spacing fixes and homepage adjustments

--- a/assets/scss/base/_pages.scss
+++ b/assets/scss/base/_pages.scss
@@ -3,7 +3,7 @@
  * ------- */
 
 .page-content {
-  margin: 2.5em auto;
+  margin: 2.25em auto;
   padding: 1em;
   max-width: $container;
   @extend %clearfix;
