--- a/assets/scss/base/_paragraphs.scss
+++ b/assets/scss/base/_paragraphs.scss
@@ -9,5 +9,5 @@ p {
 }
 
 .single p, .about p, .contact-info p, .form input, .form textarea{
-  color: lighten($base, 5%);
+  color: lighten($base, 10%);
 }
