--- a/assets/scss/objects/_contact.scss
+++ b/assets/scss/objects/_contact.scss
@@ -8,16 +8,16 @@
    @include span-columns(4);
  }
  h3 {
-   margin-bottom: .5em;
+   margin: -.5em auto 1em;
    text-transform: uppercase;
-   font-size: 1.25em;
-   letter-spacing: .2em;
+   font-size: 2.25em;
+   letter-spacing: .15em;
    text-transform: uppercase;
-   font-weight: bold;
    line-height: 1.4;
    text-align: center;
    @include bp (medium) {
      text-align: left;
+     margin: -.25em 0 .5em 0;
    }
 
  }
