--- a/assets/scss/objects/_home.scss
+++ b/assets/scss/objects/_home.scss
@@ -46,7 +46,7 @@
   bottom: 0;
   right: 0;
   position: absolute;
-  opacity: .25;
+  opacity: .2;
 }
 
 .slide__info {
@@ -64,7 +64,7 @@
   font-size: 2em;
   letter-spacing: .1em;
   line-height: 1.1;
-  text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.5);
+  text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.65);
   @include bp(medium) {
     font-size: 2.5em;
   }
@@ -73,7 +73,7 @@
 .slide__description {
   display: none;
   @include bp(medium) {
-    text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.5);
+    text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.65);
     letter-spacing: 1px;
     line-height: 1.4;
     display: block;
@@ -111,7 +111,7 @@
   font-family: $icons;
   color: white;
   font-size: 1.5em;
-  text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.5);
+  text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.65);
   &:hover {
     color: rgba(255,255,255,.8);
   }
